kodex-rs/tui/src/bottom_pane/snapshots/kodex_tui__bottom_pane__experimental_features_view__tests__experimental_features_analytics_plan_history.snap
---
source: tui/src/bottom_pane/experimental_features_view_tests.rs
expression: buffer_text(&buffer)
---

  Experimental features
  Checked features are configured on. Some experimental features take effect
  only in new tasks or after restarting the Kodex server.


› [ ] Analytics plan history  Preview five-hour and weekly allowance history for
                              consumer accounts in /analytics.


  space toggle · enter save · esc save/close
