kodex-rs/tui/src/bottom_pane/snapshots/kodex_tui__bottom_pane__experimental_features_view__tests__experimental_features_save_failed.snap
---
source: tui/src/bottom_pane/experimental_features_view_tests.rs
expression: buffer_text(&buffer)
---

  Experimental features
  Checked features are configured on. Some experimental features take effect
  only in new tasks or after restarting the Kodex server.
  Saved but readback failed


› [ ] Server network_proxy       Description supplied by the server.
  [ ] Server future_feature      Description supplied by the server.
  [ ] Server prevent_idle_sleep  Description supplied by the server.


  Selections retained. Save to retry, or cancel to close.
